got rid of unessecary scrollbar, tried (unsuccessfully) to fix navbar slide in animation positioning

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,9 +1,8 @@
-ul
+#navBar
 {
   list-style-type: none;
 	position: fixed;
 	top: 0;
-	left: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
